# lumichat

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  setup_db.sh
docs/: chat-creation.md
front/: Cargo.toml  index.html  index.scss
front/src/: main.rs
migrations/2024-02-13-221026_create_users/: up.sql
shared/: Cargo.toml
shared/migrations/2024-02-17-161538_create_chats/: up.sql
shared/migrations/2024-02-17-161545_create_messages/: down.sql  up.sql
shared/migrations/2024-02-29-022606_create_settings/: down.sql  up.sql
shared/src/: lib.rs  schema.rs
src/: main.rs  model.rs  schema.rs
