workspace = { members = ["front"] }
[package]
name = "lumichat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-identity = "0.7.0"
actix-session = { version = "0.9.0", features = ["redis-rs-session"] }
actix-web = "4.5.1"
bcrypt = "0.15.0"
clap = { version = "4.5.0", features = ["derive"] }
diesel = { version = "2.1.4", features = ["postgres", "r2d2"] }
jsonwebtoken = "9.2.0"
serde = { version = "1.0.196", features = ["derive"] }
