[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
gloo-console = "0.3.0"
gloo-net = { version = "0.5.0", features = ["websocket"] }
gloo-utils = "0.2.0"
serde = { version = "1.0.196", features = ["derive"] }
wasm-bindgen-futures = "0.4.41"
web-sys = { version = "0.3.68", features = ["Location"] }
yew = { version = "0.21.0", features = ["csr"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
chrono = { version = "0.4.34", features = ["serde"] }
futures = "0.3.30"
serde_json = "1.0.113"
